# ecli_resolver

./: README.md  pyproject.toml
ecli_resolver/: __init__.py  resolver.py  routes.py  util.py
ecli_resolver/resolvers/: be.py
ecli_resolver/templates/: index.html
